--- a/src/app/add-task/add-task.component.css
+++ b/src/app/add-task/add-task.component.css
@@ -53,6 +53,7 @@
     text-transform: uppercase;
     overflow: hidden;
     cursor: pointer;
+    margin-top: 1%;
   }
   
   .custom-add-button:hover {
